--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <application
         android:allowBackup="true"
+        android:networkSecurityConfig="@xml/network_security_config"
+
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/ic_logo_background"
@@ -32,7 +34,9 @@
 
     </application>
     <uses-permission
+
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ManifestOrder,ScopedStorage"
         android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
